--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -7,6 +7,9 @@ pipeline {
   options{
         timeout(time: 1,unit:'HOURS')
         disableConcurrentBuilds()
+        ansiColor('xterm')
+
+
     }
     // Build //
     stages {
