--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -51,6 +51,26 @@ pipeline {
                 """
             }
         }
+        stage('Destroy') {
+            when { 
+                expression { "${params.ACTION}" == 'DESTROY' }
+            }   
+            input {
+                message "Should we continue?"
+                ok "Yes, we should."
+                // submitter "alice,bob"
+                // parameters {
+                //     string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
+                // }
+            }
+            steps {
+                sh """
+                     cd 01-vpc
+                     terraform destroy -auto-approve
+                """
+            }
+        }
+
        
     }
     // post build 
